Minor adjustments to xml files

--- a/app/src/main/res/layout/fragment_emailus.xml
+++ b/app/src/main/res/layout/fragment_emailus.xml
@@ -2,39 +2,39 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    <RelativeLayout
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/email_doc"
-        android:layout_width="wrap_content"
-        android:layout_height="262dp"
-        android:src="@drawable/mail"
-        android:importantForAccessibility="no"
-        android:layout_centerHorizontal="true"/>
+        <ImageView
+            android:id="@+id/email_doc"
+            android:layout_width="wrap_content"
+            android:layout_height="262dp"
+            android:src="@drawable/mail"
+            android:importantForAccessibility="no"
+            android:layout_centerHorizontal="true"/>
 
-    <TextView
-        android:id="@+id/emailuson"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/email_doc"
-        android:layout_centerHorizontal="true"
-        android:text="@string/email_us"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        android:textStyle="bold" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/emailuson"
-        android:text="whiteghost1111@gmail.com"
-        android:layout_centerHorizontal="true"
-        android:textSize="20sp"
-        android:textColor="@color/black"
-        android:id="@+id/myemail"
-        tools:ignore="HardcodedText" />
+        <TextView
+            android:id="@+id/emailuson"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/email_doc"
+            android:layout_centerHorizontal="true"
+            android:text="@string/email_us"
+            android:textColor="@color/black"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/emailuson"
+            android:text="whiteghost1111@gmail.com"
+            android:layout_centerHorizontal="true"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:id="@+id/myemail"
+            tools:ignore="HardcodedText" />
 
-</RelativeLayout>
+    </RelativeLayout>
 </ScrollView>
