--- a/app/src/main/res/layout/fragment_profilesettings.xml
+++ b/app/src/main/res/layout/fragment_profilesettings.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:gravity="center"
-        android:text="Settings"
+        android:text="@string/settings"
         android:textColor="@color/black"
         android:textSize="40dp"
         android:textStyle="bold" />
@@ -21,7 +21,7 @@
         android:layout_below="@id/settingstext"
         android:layout_marginTop="10dp"
         android:gravity="center"
-        android:text="Change your basic account settings here."
+        android:text="@string/change_your_basic_account_settings_here"
         android:textColor="@color/black"
         android:textStyle="normal" />
 
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textsettings"
         android:layout_marginTop="40dp"
-        android:text="Your username:"
+        android:text="@string/your_username"
         android:textColor="@color/black"
         android:textSize="18dp"
         android:textStyle="bold" />
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/changename"
         android:layout_marginTop="30dp"
-        android:text="Your email adress:"
+        android:text="@string/your_email_adress"
         android:textColor="@color/black"
         android:textSize="18dp"
         android:textStyle="bold" />
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/changeemail"
         android:layout_marginTop="30dp"
-        android:text="Your number:"
+        android:text="@string/your_number"
         android:textColor="@color/black"
         android:textSize="18dp"
         android:textStyle="bold" />
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/changenumber"
         android:layout_marginTop="30dp"
-        android:text="Your password:"
+        android:text="@string/your_password"
         android:textColor="@color/black"
         android:textSize="18dp"
         android:textStyle="bold" />
@@ -105,7 +105,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:backgroundTint="@color/blue"
-        android:text="Save changes" />
+        android:text="@string/save_changes" />
 
     <com.google.android.material.textfield.TextInputLayout
 
