--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -2,29 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:padding="16dp"
     android:background="@color/blue"
     android:gravity="bottom"
     android:orientation="vertical"
-    >
+    android:padding="16dp">
 
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="130dp"
-        android:src="@drawable/loginphoto"
-
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/yourname"
-        android:text="Your Name"
-        android:textColor="@color/white"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        />
+        android:layout_height="match_parent"
+        android:src="@drawable/loginphoto" />
 
 
 </LinearLayout>
