--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -60,7 +60,7 @@
                 <item
                     android:id="@+id/nav_abouttheapp"
                     android:icon="@drawable/baseline_info_24"
-                    android:title="About the app" />
+                    android:title="@string/about_the_app" />
 
             </group>
 
