finished recycle_item_view

--- a/app/src/main/res/layout/fragment_mealmanagment.xml
+++ b/app/src/main/res/layout/fragment_mealmanagment.xml
@@ -123,9 +123,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/savebtn"
             android:text="Edit a meal"
-            android:textColor="@color/gray"
+            android:textColor="@color/white"
             android:drawableRight="@drawable/edit_fill0_wght400"
-            android:drawableTint="@color/gray"
+            android:drawableTint="@color/white"
             android:backgroundTint="@color/gray"
             android:layout_alignParentRight="true"
             android:layout_marginTop="60dp"
