Select Elder onClick now gets list of all Meals of Elder selected

--- a/app/src/main/res/layout/meal_item_view.xml
+++ b/app/src/main/res/layout/meal_item_view.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp">
     
     <TextView
         android:id="@+id/tvItemDate"
@@ -33,9 +34,10 @@
         android:textSize="17dp"
         />
     <TextView
+        android:id="@+id/tvItemComment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="comment"
+        android:text="Comment"
         android:textStyle="italic"
         android:layout_below="@+id/tvItemDate"
         />
@@ -45,19 +47,18 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:drawableLeft="@drawable/edit_fill0_wght400"
-        android:drawableTint="@color/white"
-        android:backgroundTint="@color/gray"
-        android:layout_toStartOf="@+id/btnRemoveItem"
-        android:layout_marginEnd="20dp"
-        />
-    <Button
-        android:id="@+id/btnRemoveItem"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:drawableLeft="@drawable/delete_fill0_wght400opsz24"
-        android:drawableTint="@color/white"
-        android:backgroundTint="@color/red"
+        android:drawableTint="@color/gray"
+        android:backgroundTint="@color/white"
         android:layout_marginEnd="20dp"
         android:layout_alignParentRight="true"
         />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_below="@+id/tvItemComment"
+        android:background="@color/black"
+        android:layout_marginTop="10dp">
+
+    </LinearLayout>
 </RelativeLayout>
