--- a/app/src/main/res/layout/fragment_edit_meal.xml
+++ b/app/src/main/res/layout/fragment_edit_meal.xml
@@ -57,7 +57,8 @@
         android:id="@+id/mealList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:layout_below="@+id/btnDatePicker"
+        android:layout_marginTop="20dp"
         />
 
 </RelativeLayout>
