--- a/app/src/main/res/layout/meal_item_view.xml
+++ b/app/src/main/res/layout/meal_item_view.xml
@@ -2,7 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp">
+    android:layout_marginTop="10dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
+    android:background="@color/lightblue"
+    android:padding="10dp"
+    android:elevation="2dp"
+    android:translationZ="2dp"
+    >
     
     <TextView
         android:id="@+id/tvItemDate"
@@ -27,11 +34,12 @@
         android:id="@+id/tvItemMeal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Breakfast"
-        android:layout_marginLeft="10dp"
+        android:text="MELLANMÅL"
+        android:textStyle="bold"
+        android:layout_marginLeft="30dp"
         android:layout_toRightOf="@+id/tvItemTime"
-        android:layout_alignBaseline="@+id/tvItemDate"
-        android:textSize="17dp"
+        android:layout_centerInParent="true"
+        android:textSize="20dp"
         />
     <TextView
         android:id="@+id/tvItemComment"
@@ -42,23 +50,5 @@
         android:layout_below="@+id/tvItemDate"
         />
 
-    <Button
-        android:id="@+id/btnEditItem"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:drawableLeft="@drawable/edit_fill0_wght400"
-        android:drawableTint="@color/gray"
-        android:backgroundTint="@color/white"
-        android:layout_marginEnd="20dp"
-        android:layout_alignParentRight="true"
-        />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_below="@+id/tvItemComment"
-        android:background="@color/black"
-        android:layout_marginTop="10dp">
-
-    </LinearLayout>
 </RelativeLayout>
