--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="aqua">#1A90C6</color>
     <color name="red">#8A0900</color>
     <color name="gray">#7E7D7D</color>
-
+    <color name="lightgray">#d3d3d3</color>
+    <color name="lightblue">#add8e6</color>
 </resources>
