--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -6,5 +6,6 @@
     <color name="aqua">#1A90C6</color>
     <color name="red">#FF0000</color>
     <color name="gray">#7E7D7D</color>
+    <color name="gray2">#B3B3B3</color>
 
 </resources>
