fixed colors so that mealmanagement doen't crash and meal item readable in night theme

--- a/app/src/main/res/layout/fragment_mealmanagment.xml
+++ b/app/src/main/res/layout/fragment_mealmanagment.xml
@@ -140,7 +140,7 @@
                 android:textColor="@color/white"
                 android:drawableEnd="@drawable/edit_fill0_wght400"
                 android:drawableTint="@color/white"
-                android:backgroundTint="@color/gray2"
+                android:backgroundTint="@color/gray"
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="60dp"
                 android:layout_marginEnd="40dp"
