--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,7 +5,9 @@
     <color name="blue">#757AF4</color>
     <color name="aqua">#1A90C6</color>
     <color name="red">#FF0000</color>
-    <color name="gray">#7E7D7D</color>
-    <color name="gray2">#B3B3B3</color>
+    <color name="gray">#B3B3B3</color>
+    <color name="lightblue">#add8e6</color>
+    <color name="lightgray">#000000</color>
+    <color name="darkgray">#242424</color>
 
 </resources>
