--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,8 @@
     <color name="blue">#1117D0</color>
     <color name="aqua">#1A90C6</color>
     <color name="red">#8A0900</color>
-    <color name="gray">#7E7D7D</color>
+    <color name="gray">#424242</color>
     <color name="lightgray">#d3d3d3</color>
     <color name="lightblue">#add8e6</color>
+    <color name="darkgray">#242424</color>
 </resources>
