--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,4 +13,11 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
 
     </style>
+
+    <style name="DialogTheme" parent="Theme.MaterialComponents.DayNight.Dialog">
+        <item name="colorAccent">@color/blue</item>
+        <item name="android:backgroundTint">@color/gray</item>
+        <item name="android:buttonBarStyle">@color/red</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
